--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
 		<div id="chat-message-list">
 			<div class="message-row">
 				<div class="message-text">
-					<ul id="messages"></ul>
+					<ul>
+						<span id="messages"></span>
+					</ul>
 					<ul id="time"></ul>
 				</div>
 				<div class="message-time">
